12-tekton/clone-build-helm/04-ingress-el.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: triggers-ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: triggers-ingress-resource
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: el.threshold.com
    http:
      paths:
      - backend:
          service:
            name: el-gitlab-event-listener
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - el.threshold.com
    secretName: el-threshold-com
